--- a/public/assets/common/css/source/custom.css
+++ b/public/assets/common/css/source/custom.css
@@ -512,15 +512,6 @@ and also iPads specifically.
     }
 }
 
-@media only screen and (max-width: 760px) {
-    .filter-button {
-        position: fixed !important;
-        bottom: 5%;
-        right: 30%;
-        z-index: 100
-    }
-}
-
 .produced {
     font-weight: bold;
     font-size: large;
@@ -529,61 +520,34 @@ and also iPads specifically.
 }
 
 table tr.unavailable {
-    position: relative;
-    color: grey;
+    opacity: 0.5;
+    background-color: #f2dede;
+    cursor: not-allowed
 }
 
-table tr.unavailable td:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    top: 5%;
-    left: 0;
-    opacity: 0.05;
-    background-color: #f2dede;
-    border-bottom: 3px solid white
+table tr.unavailable:hover {
+    background-color: #f2dede !important;
 }
 
 table tr.not_added {
     background-color: #eceeef;
-    border-bottom: 3px solid white
+    border-bottom: 2px solid white;
 }
 
 .draggable {
     cursor: grab
 }
 
-.overlay {
-    display: none;
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    z-index: 101;
-    top: 0;
-    left: 0;
-    background-color: rgba(128, 128, 128, 0.7);
+.slide-down-button{
+    font-size:20px;
+    margin-top: 5px;
 }
 
-.overlay-content {
-    position: relative;
-    top: 25%;
-    width: 100%;
-    margin-top: 30px;
+hr{
+    margin-top: 1px;
+    margin-bottom: 1px;
 }
 
-.overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
-}
-
-.overlay .closebtn {
-    position: absolute;
-    top: 40px;
-    right: 10px;
-    font-size: 60px;
-}
-
-li {
-    list-style-type: none;
+.table tbody + tbody {
+    border-top: none !important;
 }
