--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -927,7 +927,7 @@
                             </thead>
                             <tbody class="mobile">
                             <tr class="mobile" ng-repeat="triggerSkillMixed in triggerSkillsMixed"
-                                ng-hide="filteredTriggerSkills(triggerSkillMixed.triggerSkill)"
+                                ng-hide="filteredTriggerSkills(triggerSkillMixed)"
                                 ng-class="addNotAddedClass(triggerSkillMixed.personageTriggerSkill)">
                                 <td class="text-right mobile trigger">
                                     <div class="text-left">
