--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -374,7 +374,7 @@
                                 </td>
                             </tr>
                         </table>
-                        <div ng-if="showGenerateIneherentsButton">
+                        <div ng-if="showGenerateInherentsButton">
                             <ul>
                                 <li style="list-style-type: none">Врожденные особенности персонажа создаются случайным
                                     образом. По нажатию на кнопку, вы можете создать набор врожденных особенностей для
@@ -1812,10 +1812,12 @@
                     </div>
 
                 </div>
+            </div>
         </section>
 
     </div>
 </div>
 
+<div class="main-backdrop"><!-- --></div>
 </body>
 </html>
