--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -331,7 +331,7 @@
                                             Прокачка
                                         </button>
                                     </a>
-                                    <button ng-click="deletePersonage(personage.id)"
+                                    <button ng-click="deletePersonage(personage)"
                                             class="btn btn-rounded btn-sm btn-danger-outline margin-inline"><i
                                             class="fa fa-trash"></i> Удалить
                                     </button>
