--- a/public/assets/common/css/source/components/notifications-alerts.css
+++ b/public/assets/common/css/source/components/notifications-alerts.css
@@ -74,6 +74,12 @@
     margin: 30px 0px 15px;
 }
 
+@media only screen and (max-width: 760px) {
+    .sweet-alert h2 {
+        margin: 0px 0px 15px !important;
+    }
+}
+
 .sweet-alert p {
     margin: 0px 0px 10px;
 }
@@ -83,6 +89,15 @@
     font-size: 18px;
     color: #514d6a;
     margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 760px) {
+    .sweet-alert .lead {
+        font-weight: 400;
+        font-size: 14px;
+        color: #514d6a;
+        margin-bottom: 20px;
+    }
 }
 
 .sweet-alert .btn {
