--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -269,10 +269,10 @@
                                     <button class="btn attributesButton">Атрибуты</button>
                                 </td>
                                 <td>
-                                    <button class="btn attachedButton">Прикрепленные навыки</button>
+                                    <button class="btn attachedButton">Прикрепленные</button>
                                 </td>
                                 <td>
-                                    <button class="btn triggerButton">Тригерные навыки</button>
+                                    <button class="btn triggerButton">Тригерные</button>
                                 </td>
                                 <td>
                                     <button class="btn meritsButton">Достоинства</button>
