--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -537,7 +537,7 @@
 
                             <nav class="c-menu c-menu--slide-bottom">
                                 <div class="slide-down-button" ng-click="openHideAttributesCategoriesFilterMenu()">
-                                    Производные
+                                    <button style="margin-top: -10px" id="characteristics">Производные</button>
                                     <i class="fa fa-angle-double-down" ng-hide="isCategoryAttributesMenuClose"></i>
                                     <i class="fa fa-angle-double-up" ng-show="isCategoryAttributesMenuClose"></i>
                                 </div>
