--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -1806,7 +1806,7 @@
                                             </div>
                                             <div class="form-group">
                                                 <label for="noticeBody" class="form-control-label">Текст:</label>
-                                                <textarea class="form-control" id="noticeBody"
+                                                <textarea id="noticeDescription" class="form-control" id="noticeBody"
                                                           ng-model="noticeDescription" required></textarea>
                                             </div>
                                         </form>
@@ -1844,7 +1844,7 @@
                                                         {{notice.name}}</h4>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <p>{{notice.description}}</p>
+                                                    <pre>{{notice.description}}</pre>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-info btn-sm"
