--- a/public/assets/common/css/source/custom.css
+++ b/public/assets/common/css/source/custom.css
@@ -8,7 +8,10 @@ body {
 }
 
 .single-page .page-content-inner {
-    background: url("../../img/bg-login.jpg") no-repeat !important;
+    background: url("../../img/bg-login.jpg") no-repeat center center !important;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
 }
 
